--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Install
         run: |
           python -m venv --upgrade-deps .venv
           . .venv/bin/activate
           pip install -e '.[test]'
       - name: Test
-        run: pytest --cov
+        run: |
+          . .venv/bin/activate
+          pytest --cov
