Improve static files handling
* set up directories
* use whitenoise in development

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ keywords = ["django", "production", "deployment"]
 [project.optional-dependencies]
 test = [
     "pytest",
-    "pytest-cov"
+    "pytest-cov",
+    "urllib3",
 ]
 
 [project.scripts]
