Revert "Replace gunicorn with waitress"
This reverts commit 9b1a6bf3a4d712cc0ef2ce83203ceb2ef17ac94e.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dynamic = ["version", "description"]
 dependencies = [
     "django-environ",
     "whitenoise",
-    "django-webserver[waitress]",
+    "django-webserver[gunicorn]",
     "django-alive",
 ]
 keywords = ["django", "production", "deployment"]
