Fixers for INSTALLED_APPS & MIDDLEWARE

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 ]
 dynamic = ["version", "description"]
 dependencies = [
+    "django-upgrade",
     "django-environ",
     "whitenoise",
     "django-webserver[gunicorn]",
